tests/dockerfile/graph_builder/checks/resources/EnvGitSslNoVerify/fail/Dockerfile.basic
FROM alpine:3.5
ENV GIT_SSL_NO_VERIFY 0
ENV GIT_SSL_NO_VERIFY=0
ENV GIT_SSL_NO_VERIFY="0"
ENV GIT_SSL_NO_VERIFY='0'
ARG GIT_SSL_NO_VERIFY=0
ARG GIT_SSL_NO_VERIFY="0"
ARG GIT_SSL_NO_VERIFY='0'
ARG GIT_SSL_NO_VERIFY 0
ENV LOL=123 GIT_SSL_NO_VERIFY=0
ENV GIT_SSL_NO_VERIFY=0 LOL=123
ENV GIT_SSL_NO_VERIFY    0
ARG GIT_SSL_NO_VERIFY    0
